Fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,12 @@
 body {
     background: #f8e8a6;
+    margin: 20px 0;
 }
 
 h1,
 p {
     text-align: center;
+    margin: 10px 20px;
 }
 
 footer {
